samples/_failures_safe/1761731953_210a04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9dcab91d.c: In function ‘print_stats’:
./samples/SAFE/__tmp_9dcab91d.c:148:12: error: missing terminating " character
  148 |     printf("Earliest: %s
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_9dcab91d.c:148:5: error: expected expression at end of input
  148 |     printf("Earliest: %s
      |     ^~~~~~
./samples/SAFE/__tmp_9dcab91d.c:148:5: error: expected declaration or statement at end of input
